src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Pitch_Owner_Alias__c</fullName>
        <label>Pitch Owner Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Lead Ad Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postage__c</fullName>
        <description>Wowcher Field for Postage</description>
        <label>Postage</label>
        <picklist>
            <picklistValues>
                <fullName>Wowcher Keeps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Keeps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Predicted_Units__c</fullName>
        <label>Predicted Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prepare__c</fullName>
        <description>INBOUND: Up to date knowledge of all products 
OUTBOUND: WHATSCUP</description>
        <inlineHelpText>INBOUND: Up to date knowledge of all products 
OUTBOUND: WHATSCUP</inlineHelpText>
        <label>Prepare</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Stage__c</fullName>
        <description>The previous stage of the opportunity.</description>
        <label>Previous Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probe__c</fullName>
        <inlineHelpText>INBOUND: Needs Identified and confirmed 
OUTBOUND: Needs Identified and confirmed</inlineHelpText>
        <label>Probe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_2_Amount__c</fullName>
        <description>How much wowcher will sell this product</description>
        <label>Product 2 Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_2_Discount__c</fullName>
        <formula>( Product_2_Usual_Selling_Price__c - Product_2_Amount__c ) / Product_2_Usual_Selling_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product 2 Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_2_Media_Surcharge__c</fullName>
        <label>Product 2 Media Surcharge</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_2_Quantity__c</fullName>
        <label>Product 2 Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_2_Supplier_Rate__c</fullName>
        <label>Product 2 Supplier % Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_2_Supplier_Unredeemed_Rate__c</fullName>
        <label>Product 2 Supplier Unredeemed % Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_2_Usual_Selling_Price__c</fullName>
        <label>Product 2 Usual Selling Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Title__c</fullName>
        <label>Product Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Lead Ad Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_In_Stock__c</fullName>
        <label>Qty In Stock</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>Rating given by the Agency on the Pitch</inlineHelpText>
        <label>Brief Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Used in validation rules.</description>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redeem_By_Email_Address__c</fullName>
        <label>Redeem By Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Redeem_By_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redeem By Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redeem_By_Phone_Number__c</fullName>
        <label>Redeem By Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Redeem_By_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redeem By Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redeem_In_store_Location__c</fullName>
        <label>Redeem In-store Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Redeem_In_store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redeem In-store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redeem_Online_Link__c</fullName>
        <label>Redeem Online Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Redeem_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redeem Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_ForCat_Best_Case__c</fullName>
        <formula>IF( ISPICKVAL(ForecastCategoryName, &apos;Best Case&apos;), Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep ForCat Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_ForCat_Closed__c</fullName>
        <formula>IF( ISPICKVAL(ForecastCategoryName, &apos;Closed&apos;), Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep ForCat Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_ForCat_Closed_num__c</fullName>
        <formula>IF( ISPICKVAL(ForecastCategoryName, &apos;Closed&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep ForCat Closed num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_ForCat_Commit__c</fullName>
        <formula>IF( ISPICKVAL(ForecastCategoryName, &apos;Commit&apos;), Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep ForCat Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_ForCat_Omitted__c</fullName>
        <formula>IF( ISPICKVAL(ForecastCategoryName, &apos;Omitted&apos;), Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep ForCat Omitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_ForCat_Omitted_num__c</fullName>
        <formula>IF(ISPICKVAL(ForecastCategoryName, &apos;Omitted&apos;), 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep ForCat Omitted num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_ForCat_Pipeline__c</fullName>
        <formula>IF(  ISPICKVAL(ForecastCategoryName, &apos;Pipeline&apos;),  Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep ForCat Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_Num__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Proactive_Booked__c</fullName>
        <formula>IF( ISPICKVAL(Type, &apos;Proactive&apos;)  &amp;&amp;   ISPICKVAL(ForecastCategoryName  , &apos;Closed&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Proactive Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Proactive__c</fullName>
        <formula>IF( ISPICKVAL( Type , &apos;Proactive&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Proactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Reactive_Booked__c</fullName>
        <formula>IF( ISPICKVAL(Type, &apos;Reactive&apos;)  &amp;&amp;   ISPICKVAL(ForecastCategoryName  , &apos;Closed&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Reactive Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Reactive__c</fullName>
        <formula>IF( ISPICKVAL( Type , &apos;Reactive&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Reactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restaurant_Payment_Terms__c</fullName>
        <description>Wowcher Only</description>
        <inlineHelpText>Restaurant Payment Terms</inlineHelpText>
        <label>Restaurant Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if restrictions apply. Please specify below</inlineHelpText>
        <label>Subject To Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restrictions_description__c</fullName>
        <label>Restrictions description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_Band__c</fullName>
        <formula>IF( Predicted_Units__c * Minimum_Deal_Product_Price__c &gt;15000, &apos;Main&apos;,  IF(Predicted_Units__c *Minimum_Deal_Product_Price__c&lt;7500, &apos;Side 2&apos;, &apos;Side 1&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sale Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Identifier__c</fullName>
        <defaultValue>&quot;SCH-1&quot;</defaultValue>
        <description>This is current Schedule identifier</description>
        <label>Schedule Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <description>Wowcher</description>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Method_And_Company__c</fullName>
        <label>Shipping Method And Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_Rejected_Reason_Desc__c</fullName>
        <inlineHelpText>Please provide any extra information for rejection reason.</inlineHelpText>
        <label>Signed Rejected Reason Desc</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signed_Rejected_Reasons__c</fullName>
        <inlineHelpText>Please choose an appropriate reason for deal rejection</inlineHelpText>
        <label>Signed Rejected Reason List</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Commission Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desirability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Quality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Similar_Merchant_Screenshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Similar Merchant Screenshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_of_ad__c</fullName>
        <label>Lead Ad Size of ad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Of_Pitch__c</fullName>
        <label>Source Of Pitch</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Wowcher__c</fullName>
        <label>Source (Wowcher)</label>
        <picklist>
            <picklistValues>
                <fullName>Merchant - Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant - Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KGB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LivingSocial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Deal Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency - Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency - Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency - PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency - Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_description__c</fullName>
        <label>Source description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Pitch_Idea__c</fullName>
        <label>MigSpecial Pitch Idea</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Projects_Revenue__c</fullName>
        <label>Special Projects Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Group__c</field>
            <operation>notEqual</operation>
            <value>ROP</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Group__c</field>
            <operation>notEqual</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Group__c</field>
            <operation>notEqual</operation>
            <value>Wraps</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Special_Projects__c</fullName>
        <label>MigSpecial Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <formula>IMAGE
(CASE( Rating__c,&quot;Excellent&quot;, &quot;/servlet/servlet.FileDownload?file=015D0000000qSrm&quot;, 
&quot;Good&quot;, &quot;/servlet/servlet.FileDownload?file=015D0000000qSrl&quot;, 
&quot;Average&quot;, &quot;/servlet/servlet.FileDownload?file=015D0000000qSrk&quot;,
&quot;No Brief Rating&quot;), &quot;No Brief Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>For Wowcher only. Dependent picklist on Category</description>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Ab Toners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure &amp; Theme Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anklet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baby/Prenatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathroom Suites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty Electricals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed Linens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedroom Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Betting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bingo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blepharoplasty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodycare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Sculpting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bootcamps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Location__c</fullName>
        <description>For postcode or Locale</description>
        <inlineHelpText>Please enter postcode or locale</inlineHelpText>
        <label>Sub Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Text__c</fullName>
        <formula>( Supplier_Contact__r.FirstName )&amp;&quot; &quot;&amp; ( Supplier_Contact__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Contact Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Supplier Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Rate__c</fullName>
        <label>Supplier % Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Supplier_to_issue_codes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier to issue codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_unredeemed_rate__c</fullName>
        <label>Supplier unredeemed % Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Suppress_Age__c</fullName>
        <label>Suppress Age</label>
        <picklist>
            <picklistValues>
                <fullName>Young</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Suppress_Gender__c</fullName>
        <label>Suppress Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Time_and_Date__c</fullName>
        <label>Time and Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Destination__c</fullName>
        <description>Wowcher Instore field for managers only</description>
        <label>Travel Destination</label>
        <picklist>
            <picklistValues>
                <fullName>Beach holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European cities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer haul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North &amp; Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East &amp; East Anglia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uk city, chains, quirky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales &amp; South West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Call__c</fullName>
        <description>Type of Business Call.</description>
        <label>Type of Call</label>
        <picklist>
            <picklistValues>
                <fullName>Outbound Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URNSearchable__c</fullName>
        <externalId>true</externalId>
        <label>URNSearchable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <description>Dependent on Payment Type &apos;Unique&apos;</description>
        <inlineHelpText>Dependent on Payment Type &apos;Unique&apos;</inlineHelpText>
        <label>Unique</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Usual_Selling_Price__c</fullName>
        <label>Usual Selling Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Group - read/write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group - read only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmental</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voucher_2_Dates_And_Times__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voucher 2 Dates And Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voucher_2_Information__c</fullName>
        <description>enter details for voucher 2</description>
        <label>Voucher 2 Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Voucher_2_Restrictions_Description__c</fullName>
        <label>Voucher 2 Restrictions Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Voucher_2_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voucher 2 Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voucher_2_Terms_And_Conditions__c</fullName>
        <label>Voucher 2 Terms And Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Voucher_3_Dates_And_Times__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voucher 3 Dates And Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voucher_3_Information__c</fullName>
        <label>Voucher 3 Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Voucher_3_Restrictions_Description__c</fullName>
        <label>Voucher 3 Restrictions Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Voucher_3_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voucher 3 Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voucher_3_Terms_And_Conditions__c</fullName>
        <label>Voucher 3 Terms And Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Voucher_Description__c</fullName>
        <label>Voucher Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Voucher_Information__c</fullName>
        <inlineHelpText>Enter all deal information in here (including links etc)</inlineHelpText>
        <label>Voucher Products</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Voucher_Terms_Conditions__c</fullName>
        <inlineHelpText>Enter the full terms and conditions in here.</inlineHelpText>
        <label>Voucher Terms &amp; Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WPS_Deal_ID__c</fullName>
        <label>WPS Deal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WPS_Product_ID__c</fullName>
        <label>WPS Product ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wowcher tick box for e-commerce only</description>
        <label>Warehouse Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wowcher_Display_Category__c</fullName>
        <label>Wowcher Display Category</label>
        <picklist>
            <picklistValues>
                <fullName>Electricals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion and Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys &amp; Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>